create single article page

--- a/src/Components/Article-Card/ArticleCard.css
+++ b/src/Components/Article-Card/ArticleCard.css
@@ -39,13 +39,14 @@
     font-weight: 200;
     font-family: 'Inter';
     margin-top: auto;
+    text-wrap: nowrap;
 }
 
 .home-article-card-button {
     width: 100%;
 }
 
-.data-like-container {
+.date-like-container {
     display: flex;
     justify-content: space-between;
 }
