--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,7 @@
     --subtext: #3a3a3a;
     --active: #a5764a;
     --shadow: #b3b3b3;
+    --light-text: #5f5f5f;
 }
 
 .app[data-dark="true"] {
@@ -13,6 +14,7 @@
     --text: #f0ebeb;
     --subtext: #cccccc;
     --active: #a5764a;
+    --light-text: #979797;
     --shadow: transperant;
 }
 
@@ -31,7 +33,8 @@
 
 a {
     font-weight: 500;
-    text-decoration: inherit;
+    color: var(--text);
+    transition: inherit;
 }
 
 button {
@@ -50,5 +53,5 @@ button {
 .wrapper {
     width: min(1480px, 99vw);
     margin-inline: auto;
-    border: 1px dashed black;
+    /* border: 1px dashed black; */
 }
