create admin editor

--- a/src/App.css
+++ b/src/App.css
@@ -53,5 +53,6 @@ button {
 .wrapper {
     width: min(1480px, 99vw);
     margin-inline: auto;
+    position: relative;
     /* border: 1px dashed black; */
 }
