--- a/src/Components/pages/DashBoard/Dashboard.css
+++ b/src/Components/pages/DashBoard/Dashboard.css
@@ -8,7 +8,7 @@ table {
     border-collapse: collapse;
     border: 2px solid rgb(214, 214, 214);
     font-family: sans-serif;
-    font-size: 1rem;
+    font-size: var(--s);
     letter-spacing: 1px;
 }
 
@@ -21,13 +21,13 @@ caption {
 
 th {
     font-weight: bolder;
-    font-size: 1rem;
+    font-size: var(--s);
 }
 
 th,
 td {
     border-bottom: 1px solid rgb(204, 204, 204);
-    padding: 8px 10px;
+    padding: 8px 1vw;
 }
 
 .published,
