--- a/src/Components/Article-Card/ArticleCard.css
+++ b/src/Components/Article-Card/ArticleCard.css
@@ -1,3 +1,35 @@
+.app[data-dark="true"] .article-card {
+    --s: 166px;
+    /* control the size*/
+    --c1: #1d1d1d;
+    --c2: #4e4f51;
+    --c3: #3c3c3c;
+    background:
+        repeating-conic-gradient(from 30deg, #0000 0 120deg, var(--c3) 0 50%) calc(var(--s)/2) calc(var(--s)*tan(30deg)/2),
+        repeating-conic-gradient(from 30deg, var(--c1) 0 60deg, var(--c2) 0 120deg, var(--c3) 0 50%);
+    background-size: var(--s) calc(var(--s)*tan(30deg));
+}
+
+
+.app[data-dark="false"] .article-card {
+    --s: 84px;
+    /* control the size*/
+    --c1: #f2f2f2;
+    --c2: #cdcbcc;
+    --c3: #999999;
+
+    --_g: 0 120deg, #0000 0;
+    background:
+        conic-gradient(at calc(250%/3) calc(100%/3), var(--c3) var(--_g)),
+        conic-gradient(from -120deg at calc(50%/3) calc(100%/3), var(--c2) var(--_g)),
+        conic-gradient(from 120deg at calc(100%/3) calc(250%/3), var(--c1) var(--_g)),
+        conic-gradient(from 120deg at calc(200%/3) calc(250%/3), var(--c1) var(--_g)),
+        conic-gradient(from -180deg at calc(100%/3) 50%, var(--c2) 60deg, var(--c1) var(--_g)),
+        conic-gradient(from 60deg at calc(200%/3) 50%, var(--c1) 60deg, var(--c3) var(--_g)),
+        conic-gradient(from -60deg at 50% calc(100%/3), var(--c1) 120deg, var(--c2) 0 240deg, var(--c3) 0);
+    background-size: calc(var(--s)*sqrt(3)) var(--s);
+}
+
 .article-card {
     border: 1px solid rgb(184, 183, 183);
     border-radius: 15px;
@@ -5,7 +37,7 @@
     cursor: pointer;
     display: grid;
     grid-template-rows: subgrid;
-    grid-row: span 2;
+
     row-gap: 0;
     overflow: hidden;
     transition: border 0.2s ease-in-out;
@@ -56,7 +88,7 @@
     font-size: 22px;
 }
 
-.love,
+.love:hover,
 .love-red:hover {
     transform: scale(1.1);
 }
