--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -7,7 +7,7 @@
 }
 
 .blog-header-anchor {
-    font-size: var(--xl);
+    font-size: var(--l);
     color: var(--text);
 }
 
@@ -17,7 +17,7 @@
 
 .moon,
 .sun {
-    font-size: 20px;
+    font-size: 15px;
 }
 
 .sun {
@@ -30,7 +30,7 @@
 
 .theme-switch {
     background-color: var(--orange);
-    width: 80px;
+    width: 60px;
     height: 30px;
     border-radius: 30px;
     display: flex;
@@ -53,5 +53,20 @@
 
 .app[data-dark="true"] .circle {
     background-color: #2e3235;
-    left: 55px;
+    left: 35px;
+}
+
+@media screen and (width<700px) {
+    .blog-header-anchor {
+        font-size: var(--sm);
+        color: var(--text);
+    }
+
+    .blog-header {
+        justify-content: center;
+        gap: 30px;
+        align-items: center;
+    }
+
+
 }
